--- a/doc/01.md
+++ b/doc/01.md
@@ -5,3 +5,10 @@
 今天看了前几节，但没细看。幸好现在LLVM不用自己编译了，不然能劝退我。
 直接在[LLVM 官网git](https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.6)下了 win64板的，里面有clang。写了hello ~~world~~ engine~。
 
+
+
+安装汇总：
+- 已有 git
+- 安装 LLVM （01 ↑）
+- 安装 Cmake 
+    https://cmake.org/
