doc: 安装过程的win下make环境

--- a/doc/01.md
+++ b/doc/01.md
@@ -9,6 +9,19 @@
 
 安装汇总：
 - 已有 git
-- 安装 LLVM （01 ↑）
-- 安装 Cmake 
+- 安装 LLVM （[LLVM 官网git](https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.6)）
+- ~~安装 Cmake~~ 
     https://cmake.org/
+- 安装 GnuWin32 Tools [1](https://getgnuwin32.sourceforge.net/) [2](https://sourceforge.net/projects/getgnuwin32/files/) 
+    ```
+    最后是GnuWin32 Tools，这是一组开源命令行工具。Linux什么的都是自带或者可以很方便地安装的。Windows上面就需要下载安装：
+
+    GetGnuWin32 - Maintaining a Gnuwin32 Package archive
+
+    这些工具数量众多，我们这里主要也是为了跑Clang的测试Case，就不一一展开了。
+
+    需要注意的是，网页上能下载的东西只是装了个下载器，装完之后需要进入安装目标目录，执行download.bat和install.bat完成安装。之后需要更改环境变量PATH，保证在我们的命令行里面可以找到这些工具。（具体路径请根据你安装的路径修改）
+    ```
+    download时一直下载失败，发现是wget过时了，改了脚本安装后发现也没有make之类的程序。那就不用这个了，下载 mingw32
+- 安装 mingw32，[mingw64](https://sourceforge.net/projects/mingw-w64/files/) 下拉，下载一个压缩包。
+    具体版本可以参考这篇文章的建议[Windows下安装mingw](https://www.cnblogs.com/lishanyang/p/15768083.html)。我下载的版本是： i686-posix-sjlj。（32位 posix，咱就是要平台无关）
