--- a/doc/01.md
+++ b/doc/01.md
@@ -25,3 +25,5 @@
     download时一直下载失败，发现是wget过时了，改了脚本安装后发现也没有make之类的程序。那就不用这个了，下载 mingw32
 - 安装 mingw32，[mingw64](https://sourceforge.net/projects/mingw-w64/files/) 下拉，下载一个压缩包。
     具体版本可以参考这篇文章的建议[Windows下安装mingw](https://www.cnblogs.com/lishanyang/p/15768083.html)。我下载的版本是： i686-posix-sjlj。（32位 posix，咱就是要平台无关）
+
+    记录：这里安装完，在第五篇中，cmake .. 之后有 `make`指令，但是执行会报错。build目录生成了一个vs项目，可以直接打开编译。对工具链还是理解不够，后续如果懂了再回来改这里。
