doc: 编译完善。 fix: 编译脚本

--- a/doc/01.md
+++ b/doc/01.md
@@ -1,4 +1,4 @@
-# 第一天
+# 入门（梦开始的地方
 
 *主要是每日编程没啥可写了，就从待办中找了一个任务出来。游戏引擎可能要更好久。*
 
@@ -7,12 +7,12 @@
 
 
 
-安装汇总：
+## 安装汇总：
 - 已有 git
 - 安装 LLVM （[LLVM 官网git](https://github.com/llvm/llvm-project/releases/tag/llvmorg-14.0.6)）
-- ~~安装 Cmake~~ 
+- 安装 Cmake
     https://cmake.org/
-- 安装 GnuWin32 Tools [1](https://getgnuwin32.sourceforge.net/) [2](https://sourceforge.net/projects/getgnuwin32/files/) 
+- ~~安装 GnuWin32 Tools~~ [1](https://getgnuwin32.sourceforge.net/) [2](https://sourceforge.net/projects/getgnuwin32/files/)
     ```
     最后是GnuWin32 Tools，这是一组开源命令行工具。Linux什么的都是自带或者可以很方便地安装的。Windows上面就需要下载安装：
 
@@ -26,8 +26,36 @@
 - 安装 mingw32，[mingw64](https://sourceforge.net/projects/mingw-w64/files/) 下拉，下载一个压缩包。
     具体版本可以参考这篇文章的建议[Windows下安装mingw](https://www.cnblogs.com/lishanyang/p/15768083.html)。我下载的版本是： i686-posix-sjlj。（32位 posix，咱就是要平台无关）
 
-记录：这里安装完，在第五篇中，cmake .. 之后有 `make`指令，但是执行会报错。有两种方式：
+## 编译
 
-1. build目录生成了一个vs项目，可以直接打开编译。
-2. Windows用`cmake --build .` 来构建exe。
+第五课创建了一些目录和空框架，需要编译。
+我是Windows下编译，编译时有两种选择。
+1. `cmake ..`（在我电脑上默认使用VS）；build目录下生成了一个VS项目，可以打开编译，也可以`cmake --build .`编译
+2. `cmake -G ' cmake -G "Unix Makefiles" ../`, 再使用 `make` 编译。
+
+写了两个简单的脚本
+
+build.bat
+```
+mkdir build
+cd build
+
+cmake -G "Unix Makefiles" ../
+
+make
+
+cmd /k
+```
+
+buildVs.bat
+```
+mkdir buildVs
+cd buildVs
+
+cmake ..
+
+cmake --build .
+
+cmd /k
+```
 
