--- a/doc/01.md
+++ b/doc/01.md
@@ -67,8 +67,8 @@ cmd /k
 
 使用win32api写了程序，编译`clang -l user32.lib helloEngine.c`，报错
 
-`fatal error: 'windows.h' file not found` 是因为，没有安装SDK，需要在VS中安装。（下面可能也是，需要安装后确认）
+`fatal error: 'windows.h' file not found` 是因为，没有安装SDK，需要在VS中安装Windows SDK。
 
 使用VS的cl编译，
 
-`cl  -l user32.lib helloEngineWin.c`。用另一台电脑报错了，需要修复
+`cl  -l user32.lib helloEngineWin.c`。
