--- a/doc/01.md
+++ b/doc/01.md
@@ -67,8 +67,13 @@ cmd /k
 
 使用win32api写了程序，编译`clang -l user32.lib helloEngine.c`，报错
 
-`fatal error: 'windows.h' file not found` 是因为，没有安装SDK，需要在VS中安装Windows SDK。
+`fatal error: 'windows.h' file not found` 是因为没有安装SDK，需要在VS中安装Windows SDK。
 
-使用VS的cl编译，
+使用VS的cl编译，要使用cl命令，有两种方式：
+
+-   使用 Native Tools Command Prompt for VS 20xx (搜索并打开)，即可使用cl
+-   将路径加入path: 我用2022加入的是 `D:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.34.31933\bin\Hostx64\x64`，路径都类似。可能会有其他问题：低版本加完使用cl时报DLL丢失的问题，需要再加入相关路径；我遇到了缺失 windows.h， 将`D:\Program Files\Microsoft Visual Studio\2022\Community\Common7\Tools`加入路径，然后每次运行cl之前需要运行 **VsDevCmd.bat**（这就达到了和直接使用Native Tools... 一样的效果：将所需环境加载进来）。 
+
+现在可以使用cl编译：
 
 `cl  -l user32.lib helloEngineWin.c`。
