fix: 编码警告消除 -wd 4819

--- a/doc/01.md
+++ b/doc/01.md
@@ -76,4 +76,9 @@ cmd /k
 
 现在可以使用cl编译：
 
-`cl  -l user32.lib helloEngineWin.c`。
+`cl user32.lib helloEngineWin.c`。
+
+之后为了做一个乒乓小游戏，将c改为了cpp，添加某些代码的时候，提醒
+`warning C4819: 该文件包含不能在当前代码页(936)中表示的字符。请将该文件保存为 Unicode 格式以防止数据丢失`，通过添加`-wd 4819`过滤此编码警告
+
+`cl -wd 4819 user32.lib gdi32.lib helloEngineWin.cpp`
