--- a/doc/01.md
+++ b/doc/01.md
@@ -82,3 +82,7 @@ cmd /k
 `warning C4819: 该文件包含不能在当前代码页(936)中表示的字符。请将该文件保存为 Unicode 格式以防止数据丢失`，通过添加`-wd 4819`过滤此编码警告
 
 `cl -wd 4819 user32.lib gdi32.lib helloEngineWin.cpp`
+
+
+绘制黑色方块的时候，大佬说加一点碰撞就可以完成乒乓了，便花了一点时间做了个可以弹的球（/Platform/Windows/01.1乒），只受重力和弹力影响，并且重力不会加速度增加。
+
