doc: make by debian.

--- a/doc/01.md
+++ b/doc/01.md
@@ -86,3 +86,48 @@ cmd /k
 
 绘制黑色方块的时候，大佬说加一点碰撞就可以完成乒乓了，便花了一点时间做了个可以弹的球（/Platform/Windows/01.1乒），只受重力和弹力影响，并且重力不会加速度增加。
 
+
+## Linux env 
+for Debian (Debian GUN/Linux 9 (stretch))
+install clang: apt-get install clang
+
+clang version:
+```
+clang version 3.8.1-24 (tags/RELEASE_381/final)
+Target: i686-pc-linux-gnu
+Thread model: posix
+```
+
+```
+ wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key
+ apt-get install software-properties-common (for add-apt-repository command)
+ apt-add-repository "deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main"
+ apt-get update
+ apt-get install -y clang-6.0
+
+```
+install clang-6.0 failed. 
+
+```
+The following packages have unmet dependencies:
+ clang-6.0 : Depends: libstdc++-5-dev but it is not installable
+             Depends: libgcc-5-dev but it is not installable
+             Depends: libobjc-5-dev but it is not installable
+             Recommends: llvm-6.0-dev but it is not going to be installed
+             Recommends: libomp-dev but it is not going to be installed
+
+```
+failed, but it's ok. clang-3.8 already be installed.
+
+install cmake
+`apt-get install cmake`
+
+make Project
+```
+mkdir build && cd build
+cmake ..
+make
+```
+
+run Empty/Empty
+
